# PAMSI_1

./: CMakeLists.txt  README.md
inc/: cos.hh
src/: Cos.cpp  Main.cpp
